<resources>
    <string name="app_name">book_room_in_hotel</string>
    <string name="hotel">Отель</string>
    <string name="about_hotel">Об отеле</string>
    <string name="rating">★%1$d %2$s</string>
    <string name="price">От %1$d ₽</string>
    <string name="convenience">Удобства</string>
    <string name="what_is_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="the_most_important">Самое необходимое</string>
    <string name="to_choose_room">К выбору номера</string>
    <string name="more_about_room"><![CDATA[Подробнее о номере >]]></string>
    <string name="choose_room">Выбрать номер</string>
    <string name="departure_from">Вылет из</string>
    <string name="info_about_buyer">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="privacy_notice">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="сitizenship">Гражданство</string>
    <string name="foreign_passport_number">Номер загранпаспорта</string>
    <string name="validity_period_foreign_passport">Срок действия загранпаспорта</string>
    <string name="tour">Тур</string>
    <string name="fuel_expenses">Топливный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="service_expenses">Сервисный сбор</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="pay">Оплатить</string>
    <string name="dates_of_tour">%1$s-%2$s</string>
    <string name="nutition">Питание</string>
    <string name="room">Номер</string>
    <string name="nights">Ночей</string>
    <string name="dates">Даты</string>
    <string name="country_city">Страна, город</string>
    <string name="tourist_counter">%1$d Турист</string>
    <string name="invalid_email_error">Почта введена неверено</string>
</resources>